--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6GieFGymK2phrtJcwyFdTxDYMSAv8PvWZ0tVIdTWjyA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
